--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -38,6 +38,13 @@ jobs:
             git submodule foreach --recursive git checkout master || { echo "Failed to switch submodules to master"; exit 1; }
             git submodule foreach --recursive git pull origin master || { echo "Failed to pull submodule changes"; exit 1; }
 
+            DJANGO_SUPERUSER_USERNAME="${{ secrets.DJANGO_SUPERUSER_USERNAME }}"
+            DJANGO_SUPERUSER_PASSWORD="${{ secrets.DJANGO_SUPERUSER_PASSWORD }}"
+            DJANGO_SUPERUSER_EMAIL="${{ secrets.DJANGO_SUPERUSER_EMAIL }}"
+            API_URL="${{ secrets.API_URL }}"
+
+            export DJANGO_SUPERUSER_USERNAME DJANGO_SUPERUSER_PASSWORD DJANGO_SUPERUSER_EMAIL API_URL
+
             bash create_env_and_deploy.sh || { echo "Failed to create .env file and deploy"; exit 1; }
 
             echo "Deployment completed successfully."
