--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -38,10 +38,10 @@ jobs:
             git submodule foreach --recursive git checkout master || { echo "Failed to switch submodules to master"; exit 1; }
             git submodule foreach --recursive git pull origin master || { echo "Failed to pull submodule changes"; exit 1; }
 
-            DJANGO_SUPERUSER_USERNAME="${{ secrets.DJANGO_SUPERUSER_USERNAME }}"
-            DJANGO_SUPERUSER_PASSWORD="${{ secrets.DJANGO_SUPERUSER_PASSWORD }}"
-            DJANGO_SUPERUSER_EMAIL="${{ secrets.DJANGO_SUPERUSER_EMAIL }}"
-            API_URL="${{ secrets.API_URL }}"
+            DJANGO_SUPERUSER_USERNAME="${{ vars.DJANGO_SUPERUSER_USERNAME }}"
+            DJANGO_SUPERUSER_PASSWORD="${{ vars.DJANGO_SUPERUSER_PASSWORD }}"
+            DJANGO_SUPERUSER_EMAIL="${{ vars.DJANGO_SUPERUSER_EMAIL }}"
+            API_URL="${{ vars.API_URL }}"
 
             export DJANGO_SUPERUSER_USERNAME DJANGO_SUPERUSER_PASSWORD DJANGO_SUPERUSER_EMAIL API_URL
 
