--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,7 @@ version: "3.8"
 services:
   frontend:
     env_file: ".env"
-    build:
-      args:
-        API_URL: ${API_URL}
-      context: ./conduit-frontend
-      dockerfile: Dockerfile
-    image: conduit-frontend:latest
+    image: ghcr.io/JohnTwiiX/conduit-frontend:latest
     container_name: conduit-frontend
     ports:
       - "8084:80"
@@ -16,10 +11,7 @@ services:
 
   backend:
     env_file: ".env"
-    build:
-      context: ./conduit-backend
-      dockerfile: Dockerfile
-    image: conduit-backend:latest
+    image: ghcr.io/JohnTwiiX/conduit-backend:latest
     container_name: conduit-backend
     volumes:
       - conduit-db:/app/conduit/db.sqlite3
