--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ${{ secrets.PROJECT_PATH }}
-            docker compose stop ${{ github.event.client_payload.service_name }}
+            docker compose stop ${{ github.event.client_payload.service_name }} || true
             docker compose rm -f ${{ github.event.client_payload.service_name }}
             docker images prune -f
             docker compose up -d ${{ github.event.client_payload.service_name }}
