--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,5 +20,6 @@ jobs:
           script: |
             cd ${{ secrets.PROJECT_PATH }}
             docker compose stop ${{ github.event.client_payload.service_name }} || true
+            docker compose rm ${{ github.event.client_payload.service_name }} -f || true
             docker image prune -a -f
             docker compose up -d ${{ github.event.client_payload.service_name }}
