--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: docker-compose-${{ env.DATE }}.yml
-          target: /tmp/docker-compose-${{ env.DATE }}.yml
+          target: /tmp/
 
       - name: SSH into the server and deploy the main repository
         uses: appleboy/ssh-action@v0.1.10
@@ -38,19 +38,18 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             # Create project directory if it doesn't exist
-              mkdir -p ${{ secrets.PROJECT_PATH }}
+            mkdir -p ${{ secrets.PROJECT_PATH }}
               
-              # Navigate to the project directory
-              cd ${{ secrets.PROJECT_PATH }}
+            # Navigate to the project directory
+            cd ${{ secrets.PROJECT_PATH }}
 
-              # Delete old docker-compose file
-              rm -f docker-compose.yml
-              
-              # Copy the new docker-compose file with the timestamp
-              cp /tmp/docker-compose-${{ env.DATE }}.yml ./docker-compose.yml
+            # Delete old docker-compose file
+            rm -f docker-compose.yml
+            mv /tmp/docker-compose-${{ env.DATE }}.yml docker-compose.yml
 
   trigger_frontend:
     runs-on: ubuntu-latest
+    needs: update_compose_setup
 
     steps:
       - name: Trigger Downstream for frontend
@@ -62,6 +61,7 @@ jobs:
 
   trigger_backend:
     runs-on: ubuntu-latest
+    needs: update_compose_setup
 
     steps:
       - name: Trigger Downstream for backend
