--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,29 @@ jobs:
             rm -f docker-compose.yml
             mv /tmp/docker-compose-${{ env.DATE }}.yml docker-compose.yml
 
+  create_env_file:
+    runs-on: ubuntu-latest
+    needs: update_compose_setup
+
+    steps:
+      - name: create file
+        run: |
+          cat <<EOT > .env
+          DJANGO_SUPERUSER_USERNAME=${{ vars.DJANGO_SUPERUSER_USERNAME }}
+          DJANGO_SUPERUSER_PASSWORD=${{ vars.DJANGO_SUPERUSER_PASSWORD }}
+          DJANGO_SUPERUSER_EMAIL=${{ vars.DJANGO_SUPERUSER_EMAIL }}
+          API_URL=${{ vars.API_URL }}
+          EOT
+
+      - name: SCP .env file to the server
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: .env
+          target: ${{secrets.PROJECT_PATH}}
+
   trigger_frontend:
     runs-on: ubuntu-latest
     needs: update_compose_setup
