--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,9 @@ jobs:
           API_URL=${{ vars.API_URL }}
           EOT
 
+      - name: Check .env file existence
+        run: ls -l .env
+
       - name: SCP .env file to the server
         uses: appleboy/scp-action@v0.1.7
         with:
